# logic-solver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
src/: NotImplementedError.h  main.cpp
src/Parser/: Parser.cpp  Parser.h
src/Propositions/: Negation.cpp  Negation.h  QuantifiedVariable.cpp  QuantifiedVariable.h  Variable.cpp  Variable.h  WellFormedFormula.cpp  WellFormedFormula.h
src/Propositions/BinaryOperations/: BinaryOperation.cpp  BinaryOperation.h  Conjunction.cpp  Conjunction.h  Disjunction.cpp  Disjunction.h  Equivalence.cpp  Equivalence.h  Implication.cpp  Implication.h
src/Propositions/Quantifiers/: ForAll.cpp  ForAll.h  ForEach.cpp  ForEach.h  Quantifier.cpp  Quantifier.h
src/Rules/: ConjunctiveSyllogism.cpp  ConjunctiveSyllogism.h  IRules.cpp  IRules.h  Inference.cpp  Inference.h  Rule.h  SRules.cpp  SRules.h
src/Rules/InferenceRules/: ConjunctiveSyllogism.cpp  ConjunctiveSyllogism.h  DisjunctiveSyllogism.cpp  DisjunctiveSyllogism.h  IRule.cpp  IRule.h  ModusPonens.cpp  ModusPonens.h  ModusTollens.cpp  ModusTollens.h
src/Rules/SimplifyRules/: And.cpp  And.h  Nif.cpp  Nif.h  Nor.cpp  Nor.h
src/Solver/: Printer.cpp  Printer.h  Rule.h  Solver.cpp  Solver.h  Statement.cpp  Statement.h
test/Propositions/: Negation.cpp  QuantifiedVariable.cpp  Variable.cpp
test/Propositions/BinaryOperations/: Conjunction.cpp  Disjunction.cpp  Equivalence.cpp  Implication.cpp
test/Rules/: IRules.cpp
